Fixed overflow scroll

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -14,7 +14,16 @@
 }
 
 .layout {
+    display: flex;
+    flex-direction: column;
     padding: 1em 2em;
+    width: 100%;
+    height: 100%;
+}
+
+.main {
+    width: 100%;
+    height: 100%;
 }
 
 h2, span {
