--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,5 +1,6 @@
 .nav {
     background-color: transparent;
+    min-height: 11.5em;
 }
 
 .wrap {
